--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
 *{
     margin: 0;
@@ -112,29 +113,42 @@ body{
 }
 
 .containerValores{
-    background-image: url(imagens/fundoPessoas.avif);
+    background-image: url(imagens/fundoPessoas.jpg);
     background-repeat: no-repeat;
-    background-position: center cover;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+.centroValoresTitulo{
+    font-family: 'Permanent Marker', cursive;
+    font-size: 60px;
+    color: #e0e0e0;
+    text-shadow: 2px 2px 4px #000000;
+    margin-top: 6%;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+}
+
 .centroValores{
-    font-family: 'Open Sans', sans-serif;
-    background-color: #ffffff ;
+    font-family: 'Permanent Marker', cursive;
+    background-color:#ffffff ;
     border-radius: 30px;
     display: flex;
     justify-content: space-evenly;
     margin-left: 2%;
     margin-right: 2%;
-    margin-top: 6%;
-    margin-bottom: 8%;
+    margin-top: 2%;
+    margin-bottom: 5%;
     padding: 10px 10px;
-    font-size: 17px;
+    font-size: 20px;
     text-align: center;
     flex-direction: column;
     align-items: center;
+    box-shadow: 2px 2px 4px #000000; ;
 }
 
 .blocosValores{
@@ -142,6 +156,7 @@ body{
     justify-content: space-between;
     margin-top: 3%;
     align-items: center;
+    margin-bottom: 6%;
 }
 
 /*------------------------ Sessão do Rodapé ------------------------*/
